<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/type_of_skin"
    tools:context="pl.saba.makecream.MainActivity">

    <TextView
        android:id="@+id/typeOfSkin"
        android:text="@string/type_of_skin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/TextStyle"
        android:layout_marginTop="35dp"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/sensitiveSkinBtn"
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:theme="@style/ButtonStyle"
        android:background="@drawable/button"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/sensitive_skin"
        app:layout_constraintBottom_toTopOf="@id/drySkinBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeOfSkin"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/drySkinBtn"
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:theme="@style/ButtonStyle"
        android:background="@drawable/button"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/dry_skin"
        app:layout_constraintBottom_toTopOf="@id/oilySkinBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sensitiveSkinBtn" />

    <Button
        android:id="@+id/oilySkinBtn"
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:theme="@style/ButtonStyle"
        android:background="@drawable/button"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/oily_skin"
        app:layout_constraintBottom_toTopOf="@id/combinationSkinBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drySkinBtn" />

    <Button
        android:id="@+id/combinationSkinBtn"
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:theme="@style/ButtonStyle"
        android:background="@drawable/button"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/combination_skin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oilySkinBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>
