<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"

        >

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/product_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            />

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/teal_700"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toEndOf="@id/productImage"
            app:layout_constraintEnd_toStartOf="@id/productCheckBox"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/minusBtn"
            tools:text="Hyaluronic acid" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/productCheckBox"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            />

        <Button
            android:id="@+id/minusBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonStyle"
            android:background="@drawable/button"
            android:gravity="center"
            android:textAllCaps="false"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="10dp"
            android:text="@string/minus_symbol"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@id/productName"
            app:layout_constraintEnd_toStartOf="@id/orderCounter"
            app:layout_constraintStart_toEndOf="@id/productImage"
            app:layout_constraintBottom_toBottomOf="parent"

            />

        <TextView
            android:id="@+id/orderCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textColor="@color/teal_700"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/initial_symbol"
            app:layout_constraintStart_toEndOf="@id/minusBtn"
            app:layout_constraintEnd_toStartOf="@id/plusBtn"
            app:layout_constraintTop_toTopOf="@id/minusBtn"
            app:layout_constraintBottom_toBottomOf="@id/minusBtn"

            />

        <Button
            android:id="@+id/plusBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonStyle"
            android:background="@drawable/button"
            android:gravity="center"
            android:textAllCaps="false"
            android:layout_marginStart="2dp"
            android:text="@string/plus_symbol"
            app:layout_constraintTop_toTopOf="@id/minusBtn"
            app:layout_constraintStart_toEndOf="@id/orderCounter"
            app:layout_constraintEnd_toStartOf="@id/productCheckBox"
            app:layout_constraintBottom_toBottomOf="@id/minusBtn"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>